Add Hoppify recognitions section
